# deneyes

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  config.yaml  sites.txt
packaging/config/: default.yaml
packaging/debian/: postinst  prerm
packaging/systemd/: dneyes.service
scripts/: build-deb.sh
src/: cli.rs  commands.rs  config.rs  dns.rs  errors.rs  http.rs  main.rs  utils.rs
src/commands/: api.rs  dns.rs  http.rs
src/dns/: dns_list_client.rs  dns_server.rs
src/http/: http_site_status.rs
src/telemetry/: clickhouse.rs  mod.rs  models.rs  sink.rs
src/utils/: file_utils.rs  time_utils.rs
web/dashboard/: index.html  package.json
web/dashboard/src/: App.tsx  styles.css  types.ts
web/dashboard/src/components/: Filters.tsx  ResolutionChart.tsx  ResolutionTable.tsx
