[package]
name = "dneyes"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
axum = { version = "0.7.5", features = ["macros", "json"] }
chrono = { version = "0.4.38", features = ["serde"] }
clickhouse = { version = "0.12.1", features = ["time", "serde"] }
config = "0.15.11"
domain = { version = "0.11.0", features = ["resolv"] }
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
tokio = { version = "1", features = ["full", "macros"] }
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utoipa = { version = "4.2.0", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "7.0.1", features = ["axum"] }
clap = { version = "4.5.27", features = ["derive"] }
